[metadata]
name = fastapi-example
version = attr: example.__version__
license = MIT
classifiers =
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
packages = find:
install_requires =
    aiosqlite
    databases
    fastapi
    sqlalchemy

[options.entry_points]
console_scripts =
  example-init = example.init:main
